--- a/awards.html
+++ b/awards.html
@@ -26,7 +26,7 @@
 
       <nav class="nav-links" data-nav-links>
         <a href="index.html#about">About</a>
-        <a href="index.html#metrics"Key Metrics</a>
+        <a href="index.html#metrics">Key Metrics</a>
         <a href="index.html#focus">Focus Areas</a>
         <a href="index.html#speakers">Speakers</a>
         <a href="index.html#insights">Insights</a>
@@ -51,7 +51,6 @@
         </p>
         <div class="awardsHero__cta reveal">
           <a class="pill" href="index.html#contact">Nominate Now</a>
-          <a class="awardsHero__link" href="#categories">View Categories</a>
         </div>
       </div>
     </section>
