--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
- </head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+</head>
 
 <body>
 
@@ -27,7 +29,7 @@
 
       <nav class="nav-links" data-nav-links>
         <a href="#about">About</a>
-        <a href="#metrics"Key Metrics</a>
+        <a href="#metrics">Key Metrics</a>
         <a href="#focus">Focus Areas</a>
         <a href="#speakers">Speakers</a>
         <a href="#insights">Insights</a>
@@ -68,8 +70,10 @@
 
       <div class="hero2__headline reveal">
         <h1 class="heroH1">
-          <span class="heroH1__line1">Healthcare,<span class="heroH1__spacer" aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-          <span class="heroH1__line2"><span class="heroH1__spacer heroH1__spacer--lead" aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>for the Himalayas</span>
+          <span class="heroH1__line1">Healthcare,<span class="heroH1__spacer"
+              aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
+          <span class="heroH1__line2"><span class="heroH1__spacer heroH1__spacer--lead"
+              aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>for the Himalayas</span>
         </h1>
       </div>
 
@@ -164,17 +168,21 @@
         <div class="sectionText">
           <p class="panel2__copy reveal">
             The Uttarakhand Healthcare &amp; Innovation Summit (UKHIS) 2026, convened by Veloxx Media, is an
-            outcome-oriented healthcare convening focused on strengthening health systems in hill and remote geographies.
+            outcome-oriented healthcare convening focused on strengthening health systems in hill and remote
+            geographies.
           </p>
           <p class="panel2__copy reveal">
             Building on the foundation of UKHIS 2025, the 2026 edition advances decisively from dialogue to delivery,
             bringing together government leadership, healthcare institutions, public health experts, industry,
-            innovators, academia, NGOs, and development partners to co-create deployable, scalable, and context-appropriate
+            innovators, academia, NGOs, and development partners to co-create deployable, scalable, and
+            context-appropriate
             healthcare solutions.
           </p>
           <p class="panel2__copy reveal">
-            UKHIS 2026 positions healthcare innovation as system integration - aligning policy, NHM frameworks, workforce,
-            digital health, diagnostics, traditional medicine, financing, and partnerships to deliver measurable outcomes
+            UKHIS 2026 positions healthcare innovation as system integration - aligning policy, NHM frameworks,
+            workforce,
+            digital health, diagnostics, traditional medicine, financing, and partnerships to deliver measurable
+            outcomes
             on the ground.
           </p>
         </div>
@@ -206,7 +214,8 @@
 
         <div class="focusGrid reveal" data-focus-grid>
           <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/cd/a5/08/cda508fafc87c2eb5671b7dda0362e63.jpg" alt="Healthcare outreach">
+            <img src="https://i.pinimg.com/736x/cd/a5/08/cda508fafc87c2eb5671b7dda0362e63.jpg"
+              alt="Healthcare outreach">
           </div>
           <div class="focusTile focusTile--image">
             <img src="https://i.pinimg.com/736x/6a/61/99/6a6199e57779fec9cb78ecf42600f2a0.jpg" alt="Community care">
@@ -265,7 +274,8 @@
           <div class="partnerLogoItem"><img src="allImages/AssociatePartner1.png" alt="Associate partner 1"></div>
           <div class="partnerLogoItem"><img src="allImages/AssociatePartner2.png" alt="Associate partner 2"></div>
           <div class="partnerLogoItem"><img src="allImages/Consulting%20Partner.png" alt="Consulting partner"></div>
-          <div class="partnerLogoItem"><img src="allImages/HimalayanGiftingPartner.png" alt="Himalayan Gifting partner"></div>
+          <div class="partnerLogoItem"><img src="allImages/HimalayanGiftingPartner.png" alt="Himalayan Gifting partner">
+          </div>
           <div class="partnerLogoItem"><img src="allImages/PSU%20Partner1.png" alt="PSU partner 1"></div>
           <div class="partnerLogoItem"><img src="allImages/PSU%20Partner2.png" alt="PSU partner 2"></div>
           <div class="partnerLogoItem"><img src="allImages/SupportingPartners1.png" alt="Supporting partner 1"></div>
@@ -285,18 +295,18 @@
         <div class="marquee-heading" aria-label="Speakers marquee">
           <div class="marquee-heading__inner">
             <div class="marquee-heading__group">
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
             </div>
             <div class="marquee-heading__group" aria-hidden="true">
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
-              <span>SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
             </div>
           </div>
         </div>
@@ -323,14 +333,16 @@
               <div class="speakerCard__photo"><img src="allImages/21.png" alt="Dr R Rajesh Kumar, IAS"></div>
               <div class="speakerCard__body">
                 <h3>Dr R Rajesh Kumar, IAS</h3>
-                <p>Program Chair - Secretary, Department of Medical Health and Family Welfare, Government of Uttarakhand</p>
+                <p>Program Chair - Secretary, Department of Medical Health and Family Welfare, Government of Uttarakhand
+                </p>
               </div>
             </article>
             <article class="speakerCard">
               <div class="speakerCard__photo"><img src="allImages/22.png" alt="Anuradha Pal, IAS"></div>
               <div class="speakerCard__body">
                 <h3>Anuradha Pal, IAS</h3>
-                <p>Program Mentor - Additional Secretary, Dept. of Medical Health and Medical Education, Government of Uttarakhand</p>
+                <p>Program Mentor - Additional Secretary, Dept. of Medical Health and Medical Education, Government of
+                  Uttarakhand</p>
               </div>
             </article>
           </div>
@@ -348,10 +360,12 @@
             </article>
 
             <article class="speakerCard">
-              <div class="speakerCard__photo"><img src="allImages/24.png" alt="Air Marshal (Dr) Pawan Kapoor (Retd.)"></div>
+              <div class="speakerCard__photo"><img src="allImages/24.png" alt="Air Marshal (Dr) Pawan Kapoor (Retd.)">
+              </div>
               <div class="speakerCard__body">
                 <h3>Air Marshal (Dr) Pawan Kapoor (Retd.)</h3>
-                <p>Former Director General - Medical Service (IAF) &amp; Vice Chancellor - Lincoln American University</p>
+                <p>Former Director General - Medical Service (IAF) &amp; Vice Chancellor - Lincoln American University
+                </p>
               </div>
             </article>
 
@@ -678,7 +692,8 @@
             <div class="insightPanel__title">Area of Progress</div>
             <div class="insightTiles">
               <article class="insightTile insightTile--wide">
-                <p class="insightTile__text"><span class="insightTile__stat">~63 lakh</span> people access government hospitals annually</p>
+                <p class="insightTile__text"><span class="insightTile__stat">~63 lakh</span> people access government
+                  hospitals annually</p>
               </article>
               <div class="insightTile insightTile--photo" aria-hidden="true">
                 <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
@@ -687,21 +702,26 @@
                 <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
               </div>
               <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">93 lakh</span> free diagnostic tests delivered to
-                  <span class="insightTile__stat">~29 lakh</span> individuals</p>
+                <p class="insightTile__text"><span class="insightTile__stat">93 lakh</span> free diagnostic tests
+                  delivered to
+                  <span class="insightTile__stat">~29 lakh</span> individuals
+                </p>
               </article>
               <div class="insightTile insightTile--accent" aria-hidden="true">
                 <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
               </div>
               <article class="insightTile insightTile--wide">
-                <p class="insightTile__text">Institutional deliveries increased from <span class="insightTile__stat">37%</span> to over
-                  <span class="insightTile__stat">93%</span></p>
+                <p class="insightTile__text">Institutional deliveries increased from <span
+                    class="insightTile__stat">37%</span> to over
+                  <span class="insightTile__stat">93%</span>
+                </p>
               </article>
               <div class="insightTile insightTile--photo insightTile--photoWide" aria-hidden="true">
                 <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
               </div>
               <article class="insightTile">
-                <p class="insightTile__text">Atal Ayushman Uttarakhand enabled <span class="insightTile__stat">~27 lakh</span> free
+                <p class="insightTile__text">Atal Ayushman Uttarakhand enabled <span class="insightTile__stat">~27
+                    lakh</span> free
                   treatments, one of the highest in India relative to population</p>
               </article>
               <div class="insightTile insightTile--accent" aria-hidden="true">
@@ -709,10 +729,12 @@
               </div>
               <article class="insightTile">
                 <p class="insightTile__text">India's first state to offer completely free dialysis, benefiting
-                  <span class="insightTile__stat">32,000+</span> patients</p>
+                  <span class="insightTile__stat">32,000+</span> patients
+                </p>
               </article>
               <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">272</span> ALS/BLS ambulances strengthening emergency
+                <p class="insightTile__text"><span class="insightTile__stat">272</span> ALS/BLS ambulances strengthening
+                  emergency
                   response</p>
               </article>
               <article class="insightTile">
@@ -728,19 +750,23 @@
                 <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
               </div>
               <article class="insightTile insightTile--wide">
-                <p class="insightTile__text"><span class="insightTile__stat">~33,000</span> bed shortfall across the state; only
+                <p class="insightTile__text"><span class="insightTile__stat">~33,000</span> bed shortfall across the
+                  state; only
                   <span class="insightTile__stat">194</span> diagnostic centres versus an estimated need of
-                  <span class="insightTile__stat">~1,000</span></p>
+                  <span class="insightTile__stat">~1,000</span>
+                </p>
               </article>
               <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">86%</span> mountainous terrain impacting access and
+                <p class="insightTile__text"><span class="insightTile__stat">86%</span> mountainous terrain impacting
+                  access and
                   continuity of care</p>
               </article>
               <div class="insightTile insightTile--accent" aria-hidden="true">
                 <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
               </div>
               <article class="insightTile">
-                <p class="insightTile__text">Specialist vacancies exceeding <span class="insightTile__stat">50%</span> in several hill
+                <p class="insightTile__text">Specialist vacancies exceeding <span class="insightTile__stat">50%</span>
+                  in several hill
                   districts</p>
               </article>
               <article class="insightTile">
@@ -759,8 +785,10 @@
         <div class="insightNote reveal">
           These insights highlight a healthcare system that has demonstrated strong delivery capability, even under
           difficult geographic conditions, while continuing to face structural and access-related constraints. UKHIS
-          2026 is designed to build on existing progress and address persistent gaps through system integration, adaptive
-          delivery models, and execution-focused innovation - ensuring healthcare solutions that are resilient, scalable,
+          2026 is designed to build on existing progress and address persistent gaps through system integration,
+          adaptive
+          delivery models, and execution-focused innovation - ensuring healthcare solutions that are resilient,
+          scalable,
           and effective across Uttarakhand's plains and hill districts.
         </div>
       </div>
@@ -819,7 +847,8 @@
           <div class="sectionRule" aria-hidden="true"></div>
         </div>
         <div class="attendeeGrid reveal">
-          <div class="attendeeCard">Senior officials from Health &amp; Family Welfare, NHA, NHM &amp; allied departments</div>
+          <div class="attendeeCard">Senior officials from Health &amp; Family Welfare, NHA, NHM &amp; allied departments
+          </div>
           <div class="attendeeCard">Leaders from public &amp; private hospitals and healthcare institutions</div>
           <div class="attendeeCard">Medical colleges, AYUSH institutions &amp; research bodies</div>
           <div class="attendeeCard">Diagnostics, MedTech &amp; health-tech innovators</div>
@@ -864,7 +893,9 @@
     <footer class="footer2">
       <div class="wrap footer2__inner">
         <div class="footer2__brandBlock">
-          <div class="footer2__brand">VELOXX</div>
+          <a class="brand" href="#top" aria-label="Uttarakhand Healthcare Summit Home">
+            <img src="./veloxx_w.png" alt="">
+          </a>
           <p class="footer2__tagline">Uttarakhand Healthcare &amp; Innovation Summit 2026</p>
         </div>
 
@@ -886,12 +917,33 @@
           </div>
           <div class="footer2__col footer2__col--cta">
             <div class="footer2__title">Connect</div>
-            <p>Dehradun, Uttarakhand - 13 March 2026</p>
-            <a class="footer2__cta" href="#contact">Register interest</a>
+            <div class="hero2__socials">
+
+              <a href="https://www.linkedin.com/company/veloxxmedia/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="https://www.facebook.com/veloxxmedia" target="_blank" aria-label="Facebook">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+
+              <a href="https://www.instagram.com/veloxxmedia/" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+              </a>
+
+              <a href="https://x.com/veloxx_media" target="_blank" aria-label="Twitter">
+                <i class="fab fa-x-twitter"></i>
+              </a>
+
+              <a href="https://www.youtube.com/@veloxx-media" target="_blank" aria-label="YouTube">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+
+            <a class="footer2__cta" href="#contact">Register</a>
           </div>
         </div>
 
-        <div class="footer2__fine">? 2026 Veloxx Media. All rights reserved.</div>
+        <div class="footer2__fine">&copy; 2026 Veloxx Media. All rights reserved.</div>
       </div>
     </footer>
   </main>
