--- a/awards.html
+++ b/awards.html
@@ -39,7 +39,7 @@
   </header>
 
   <main id="top" class="page">
-    <section class="panel2 panel2--awardsHero">
+    <section class=" panel2--awardsHero">
       <div class="wrap panel2__inner">
         <div class="sectionTitle reveal">
           <h2>UKHIS 2026 Awards</h2>
@@ -106,13 +106,13 @@
       </div>
     </section>
 
-    <section class="panel2 panel2--contact">
+    <section class=" panel2--contact">
       <div class="wrap awardsCTA__wrap">
         <div class="sectionTitle sectionTitle--centered reveal">
           <h2>Ready to Nominate?</h2>
           <div class="sectionRule" aria-hidden="true"></div>
         </div>
-        <p class="panel2__copy panel2__copy--dark reveal">
+        <p class="panel2__copy panel2__copy--dark reveal" style="text-align: center;">
           Share your innovation or service impact story with the UKHIS awards committee.
         </p>
         <div class="awardsCTA reveal">
