--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
       <div class="hero2__headline reveal">
         <h1 class="heroH1">
           <span class="heroH1__line1">Healthcare,<span class="heroH1__spacer"
-              aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
+              aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
           <span class="heroH1__line2"><span class="heroH1__spacer heroH1__spacer--lead"
-              aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>for the Himalayas</span>
+              aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>for the Himalayas</span>
         </h1>
       </div>
 
@@ -212,34 +212,50 @@
           <div class="sectionRule" aria-hidden="true"></div>
         </div>
 
-        <div class="focusGrid reveal" data-focus-grid>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/cd/a5/08/cda508fafc87c2eb5671b7dda0362e63.jpg"
-              alt="Healthcare outreach">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/6a/61/99/6a6199e57779fec9cb78ecf42600f2a0.jpg" alt="Community care">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/26/cc/f1/26ccf1b341fe22b47fb7c751109a6ce3.jpg" alt="Rural clinic">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/d6/7a/ba/d67aba1d6541fe48292432cb7f442264.jpg" alt="Healthcare team">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/24/14/bb/2414bb946243044df3a056ef7d903c4b.jpg" alt="Medical support">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/1c/1d/7a/1c1d7a350ae793ec7f26d333e9873a73.jpg" alt="Primary care">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/1b/6b/ad/1b6bad70509bfad224378564da34d6c0.jpg" alt="Health workers">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/6b/d9/6a/6bd96a98d1748ff3c4f45eb8e3c6ef7c.jpg" alt="Field clinic">
-          </div>
-          <div class="focusTile focusTile--image">
-            <img src="https://i.pinimg.com/736x/52/37/cf/5237cf1a0035789e5d0fa6126a804aa6.jpg" alt="Care delivery">
+        <div class="wrap">
+          <div class="grid">
+            <div class="card hero" style="background-image:url('https://images.unsplash.com/photo-1504814532849-9270c401a32a?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Community Access</h3>
+                <p>Mobile care, outreach, and last-mile delivery for underserved regions.</p>
+              </div>
+            </div>
+            <div class="card a" style="background-image:url('https://images.unsplash.com/photo-1579154204601-01588f351e67?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Primary Care</h3>
+                <p>Preventive screening and early intervention.</p>
+              </div>
+            </div>
+            <div class="card b" style="background-image:url('https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Rural Clinics</h3>
+                <p>Strengthening facilities and essential services.</p>
+              </div>
+            </div>
+            <div class="card tall" style="background-image:url('https://images.unsplash.com/photo-1527613426441-4da17471b66d?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Workforce</h3>
+                <p>Training, retention, and digital upskilling.</p>
+              </div>
+            </div>
+            <div class="card c" style="background-image:url('https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Emergency Response</h3>
+                <p>Rapid diagnostics and triage workflows.</p>
+              </div>
+            </div>
+            <div class="card d" style="background-image:url('https://images.unsplash.com/photo-1457694716743-eb419114c894?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Digital Health</h3>
+                <p>Telemedicine and continuity of care.</p>
+              </div>
+            </div>
+            <div class="card e" style="background-image:url('https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=1200&q=80');">
+              <div class="content">
+                <h3>Care Delivery</h3>
+                <p>Integrated services with measurable outcomes.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -679,7 +695,7 @@
     </section>
 
     <!-- Uttarakhand Healthcare - Key Data Insights -->
-    <section id="insights" class="panel2 panel2--discussion">
+    <section id="insights" class="panel2 panel2--discussion" style="overflow: hidden;">
       <div class="wrap">
         <div class="kdpTitle reveal">
           <h2>Uttarakhand Healthcare - Key Data Insights</h2>
@@ -840,7 +856,7 @@
     </section>
 
     <!-- Who will be there -->
-    <section id="who" class="panel2 panel2--discussion">
+    <section id="who" class="panel2 panel2--discussion" style="overflow: hidden;">
       <div class="wrap">
         <div class="sectionTitle sectionTitle--centered reveal">
           <h2>Who Will Be There</h2>
