--- a/awards.html
+++ b/awards.html
@@ -123,37 +123,60 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer2">
+  <footer class="footer2">
       <div class="wrap footer2__inner">
         <div class="footer2__brandBlock">
-          <div class="footer2__brand">VELOXX</div>
+          <a class="brand" href="#top" aria-label="Uttarakhand Healthcare Summit Home">
+            <img src="./veloxx_w.png" alt="">
+          </a>
           <p class="footer2__tagline">Uttarakhand Healthcare &amp; Innovation Summit 2026</p>
         </div>
 
         <div class="footer2__columns">
           <div class="footer2__col">
             <div class="footer2__title">Summit</div>
-            <a href="index.html#about">About</a>
-            <a href="index.html#metrics">Key Metrics</a>
-            <a href="index.html#focus">Focus Areas</a>
-            <a href="index.html#speakers">Speakers</a>
-            <a href="index.html#insights">Insights</a>
+            <a href="#about">About</a>
+            <a href="#metrics">Key Metrics</a>
+            <a href="#focus">Focus Areas</a>
+            <a href="#speakers">Speakers</a>
+            <a href="#insights">Insights</a>
           </div>
           <div class="footer2__col">
             <div class="footer2__title">Explore</div>
-            <a href="index.html#why">Why Attend</a>
-            <a href="index.html#who">Who Will Be There</a>
-            <a href="awards.html">Awards</a>
-            <a href="index.html#contact">Contact</a>
+            <a href="#why">Why Attend</a>
+            <a href="#who">Who Will Be There</a>
+            <a href="#contact">Contact</a>
+            <a href="#top">Back to Top</a>
           </div>
           <div class="footer2__col footer2__col--cta">
             <div class="footer2__title">Connect</div>
-            <p>Dehradun, Uttarakhand · 13 March 2026</p>
-            <a class="footer2__cta" href="index.html#contact">Register interest</a>
+            <div class="hero2__socials">
+
+              <a href="https://www.linkedin.com/company/veloxxmedia/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="https://www.facebook.com/veloxxmedia" target="_blank" aria-label="Facebook">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+
+              <a href="https://www.instagram.com/veloxxmedia/" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+              </a>
+
+              <a href="https://x.com/veloxx_media" target="_blank" aria-label="Twitter">
+                <i class="fab fa-x-twitter"></i>
+              </a>
+
+              <a href="https://www.youtube.com/@veloxx-media" target="_blank" aria-label="YouTube">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+
+            <a class="footer2__cta" href="#contact">Register</a>
           </div>
         </div>
 
-        <div class="footer2__fine">© 2026 Veloxx Media. All rights reserved.</div>
+        <div class="footer2__fine">&copy; 2026 Veloxx Media. All rights reserved.</div>
       </div>
     </footer>
   </main>
